docs(readme): add grim and slurp as dep
i forgor :skull:

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -243,7 +243,7 @@
     font-size: 12pt;
     color: @sound;
     background: transparent;
-    margin-right: -1px;
+    /* margin-right: -1px; */
     margin-bottom: -1px;
 }
 
